--- a/Hora+da+prática.ipynb
+++ b/Hora+da+prática.ipynb
@@ -2072,7 +2072,7 @@
       "metadata": {
         "id": "gxVg1sc_xACI"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -2095,9 +2095,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9a8e7b09-2c74-4621-fbeb-9c83ad42ec17"
+        "outputId": "22c69e4b-fb84-43f6-9386-8f9bcc23d828"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -2128,41 +2128,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "abb82472-4ba6-454d-e1c8-e15a523b83da"
+        "outputId": "de832c54-b910-49b0-e707-1f6c3de7989d"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "O texto apresenta pontuações na palavra \"poderosa,\".\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "dia = 15\n",
-        "mes = 10\n",
-        "ano = 2015\n",
-        "print(dia, mes, ano, sep=\"/\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "aeFFmKznibH0",
-        "outputId": "9b0ba26b-3224-48df-d8b2-0021d4df10d4"
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "15/10/2015\n"
           ]
         }
       ]
@@ -2206,42 +2180,119 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# criando a função que recebe as duas listas e a operação a ser realizada\n",
+        "def divide_colunas(lista_1: list, lista_2: list) -> list:\n",
+        "  # try-except que verifica se é possível calcular a divisão e lança exceção se as listas tem tamanhos diferentes\n",
+        "  # ou se temos alguma divisão por zero em um dos cálculos entre os números das listas\n",
+        "  try:\n",
+        "    if len(lista_1) != len(lista_2): # Verificando se as listas tem o mesmo tamanho, se não lança uma exceção\n",
+        "      raise ValueError(\"As listas precisam ter o mesmo tamanho\")\n",
+        "\n",
+        "    # A função zip pareia os elementos das listas e uma lista é gerada por meio da razão entre os pares\n",
+        "    resultado = [round(a / b, 2) for a, b in zip(lista_1, lista_2)] \n",
+        "  except ValueError as e:\n",
+        "    print(e)\n",
+        "  except ZeroDivisionError as e:\n",
+        "    print(f\"{e}: A 2ª lista não pode possuir um valor igual a 0\")\n",
+        "  else:\n",
+        "    return resultado"
+      ],
       "metadata": {
         "id": "pYofyZVsuF2Y"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Testando no exemplo que não lança exceção\n"
+        "# Testando no exemplo que não lança exceção\n",
+        "pressoes = [100, 120, 140, 160, 180]\n",
+        "temperaturas = [20, 25, 30, 35, 40]\n",
+        "\n",
+        "divide_colunas(pressoes, temperaturas)"
       ],
       "metadata": {
-        "id": "gSvAEmxit1zI"
+        "id": "gSvAEmxit1zI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3983cf3c-c028-4887-8443-23b298fd918d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[5.0, 4.8, 4.67, 4.57, 4.5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Testando no exemplo que lança exceção (ZeroDivisionError)\n"
+        "# Testando no exemplo que lança exceção (ZeroDivisionError)\n",
+        "pressoes = [60, 120, 140, 160, 180]\n",
+        "temperaturas = [0, 25, 30, 35, 40]\n",
+        "\n",
+        "divide_colunas(pressoes, temperaturas)"
       ],
       "metadata": {
-        "id": "bvebuMOot4ur"
+        "id": "bvebuMOot4ur",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "43441029-5c6e-41df-a13c-77155340c882"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "division by zero: A 2ª lista não pode possuir um valor igual a 0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Testando no exemplo que lança exceção (ValueError)\n"
+        "# Testando no exemplo que lança exceção (ValueError)\n",
+        "pressoes = [100, 120, 140, 160]\n",
+        "temperaturas = [20, 25, 30, 35, 40]\n",
+        "\n",
+        "divide_colunas(pressoes, temperaturas)"
       ],
       "metadata": {
-        "id": "sFsfTVHqt4d5"
+        "id": "sFsfTVHqt4d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cdb1e9cb-db41-4638-e3f3-f07243c844c8"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "As listas precisam ter o mesmo tamanho\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Z3-R8RoBD1LO"
       },
       "execution_count": null,
       "outputs": []
